# wallet-service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
src/wallet_service/: __init__.py  app.py  config.py  models.py  repository.py  routes.py  schemas.py  utils.py  views.py
src/wallet_service/docs/: db.puml
tests/: conftest.py  test_api.py  test_app.py  test_async_api.py  test_helper.py
